# notify

./: README.md  pyproject.toml  test.py
src/notify/: discord.py
